Fixed bug with falling character falling behind Portfolio signs

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -368,6 +368,9 @@ Section: Portfolio
     text-align: center;
 }
 
+.gameInfoBackgroundImg{
+    z-index: -1;
+}
 
 /*
 Section: Clouds
